# fantastic-garbanzo

./: .env.example  .gitignore  PRODUCTION_CHECKLIST.md  README.md  add_voice_setup_cols.py  build_deploy.sh  check_db.py  commit_push.ps1  deploy_batch2.ps1  deploy_now.sh  deploy_pull.bat  docker-compose.prod.yml  docker-compose.yml  final_deploy.sh  init_db.py  livekit.yaml  nginx-initial.conf  nginx.conf  package-lock.json  redeploy.sh  register_alembic.py  resize_disk.sh  run_migrations.py  ssh_output.txt  verify_deployment.ps1
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_subscriptions_recording.py  003_webhooks_notifications.py  004_credit_system.py  005_user_preferences.py  006_ringtone_notification_tones.py
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/middleware/: csrf.py  rate_limit.py
backend/app/models/: database.py  models.py
backend/app/routers/: admin.py  ai.py  analytics.py  auth.py  call_features.py  calls.py  chats.py  friends.py  health.py  integrations.py  notifications.py  payments.py  preferences.py  recording.py  rooms.py  security.py  video_features.py  voice.py  websocket.py  whiteboard.py
backend/app/services/: ai_features_service.py  ai_service.py  auth_service.py  call_features_service.py  credit_service.py  daily_service.py  email_service.py  job_queue.py  livekit_service.py  logging_service.py  notifications_service.py  pipeline.py  pubsub_service.py  recording_service.py  redis_service.py  stripe_service.py  (+8 more)
backend/tests/: conftest.py
(+70 files in other folders)
