[project]
name = "voicetranslate-backend"
version = "0.1.0"
description = "Real-Time Voice Translation Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "redis>=5.2.0",
    "deepgram-sdk>=3.7.0",
    "openai>=1.52.0",
    "anthropic>=0.37.0",
    "elevenlabs>=1.12.0",
    "boto3>=1.35.0",
    "python-multipart>=0.0.12",
    "pyjwt>=2.9.0",
    "bcrypt>=4.2.0",
    "passlib[bcrypt]>=1.7.4",
    "sentry-sdk[fastapi]>=2.17.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.12.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
